Closed
Bug 1990162
Opened 11 months ago
Closed 11 months ago
Open dmabuf device with O_CLOEXEC
Categories
(Core :: Widget: Gtk, defect, P3)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
145 Branch
People
(Reporter: stransky, Assigned: stransky)
References
Details
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-release+
|
Details | Review |
No description provided.
| Assignee | ||
Comment 1•11 months ago
|
||
Updated•11 months ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com:
https://github.com/mozilla-firefox/firefox/commit/7467a839a5ba
https://hg.mozilla.org/integration/autoland/rev/15ca7b67fc3f
[Linux] Open dmabuf device with O_CLOEXEC on Linux r=jld
Comment 3•11 months ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
status-firefox145:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 145 Branch
| Assignee | ||
Updated•11 months ago
|
status-firefox143:
--- → affected
status-firefox144:
--- → affected
| Assignee | ||
Comment 4•11 months ago
|
||
Comment on attachment 9514918 [details]
Bug 1990162 [Linux] Open dmabuf device with O_CLOEXEC on Linux r?jld
Beta/Release Uplift Approval Request
- User impact if declined/Reason for urgency: Firefox GFX process regular crashes on Fedora 43+ without glycin fix - https://gitlab.gnome.org/GNOME/glycin/-/commit/8af36048dbdda27a05b87b2fc896c05161d21f64
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Add flag to dmabuf fd to close on process exit.
- String changes made/needed:
- Is Android affected?: No
Attachment #9514918 -
Flags: approval-mozilla-beta?
| Assignee | ||
Comment 5•11 months ago
|
||
Comment on attachment 9514918 [details]
Bug 1990162 [Linux] Open dmabuf device with O_CLOEXEC on Linux r?jld
Beta/Release Uplift Approval Request
- User impact if declined/Reason for urgency: Firefox GFX process regular crashes on Fedora 43+ without glycin fix - https://gitlab.gnome.org/GNOME/glycin/-/commit/8af36048dbdda27a05b87b2fc896c05161d21f64
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Add flag to dmabuf fd to close on process exit.
- String changes made/needed:
- Is Android affected?: No
Attachment #9514918 -
Flags: approval-mozilla-release?
Comment 6•11 months ago
|
||
Comment on attachment 9514918 [details]
Bug 1990162 [Linux] Open dmabuf device with O_CLOEXEC on Linux r?jld
Approved for 144.0b7.
Attachment #9514918 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•11 months ago
|
Comment 8•11 months ago
|
||
Comment on attachment 9514918 [details]
Bug 1990162 [Linux] Open dmabuf device with O_CLOEXEC on Linux r?jld
Approved for 143.0.3.
Attachment #9514918 -
Flags: approval-mozilla-release? → approval-mozilla-release+
Updated•11 months ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•