Bug 1990162 [Linux] Open dmabuf device with O_CLOEXEC on Linux r=jld

Differential Revision: https://phabricator.services.mozilla.com/D265754